FFR-4341 -> FFR-4828 text overlapping issue fixed

--- a/assets/css/fad-custome-3.scss
+++ b/assets/css/fad-custome-3.scss
@@ -4657,7 +4657,6 @@
         width: 50%
     }
     .latest-shop-img {
-        width: 137px;
         height: 103px
     }
     .latest-shop-img img {
